[package]
name = "ribs"
version = "0.1.0"
authors = ["Thiago Ramos <thiago@codecov.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
fraction = "0.6.3"

[lib]
name = "ribs"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.19.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[target.'cfg(target_env = "musl")'.dependencies.jemallocator]
version = "0.3.0"
features = ["disable_initial_exec_tls"]
profiler = true
