[project]
name = "shared"
version = "0.1.0"
description = "Shared code used in codecov API and worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.59",
    "cachetools>=5.5.0",
    "cerberus>=1.3.5",
    "codecov-ribs>=0.1.18",
    "colour>=0.1.5",
    "cryptography>=43.0.3",
    "django-better-admin-arrayfield>=1.4.2",
    "django-model-utils>=5.0.0",
    "django-postgres-extra>=2.0.8",
    "django-prometheus>=2.3.1",
    "django<5",
    "google-auth>=2.36.0",
    "google-cloud-pubsub>=2.27.1",
    "google-cloud-storage>=2.18.2",
    "httpx>=0.23.0",
    "ijson>=3.3.0",
    "minio>=7.2.10",
    "mmh3>=5.0.1",
    "oauthlib>=3.2.2",
    "orjson>=3.10.11",
    "prometheus-client>=0.21.0",
    "pyjwt>=2.9.0",
    "pyparsing>=3.2.0",
    "python-redis-lock>=4.0.0",
    "pyyaml>=6.0.2",
    "redis>=5.2.0",
    "requests>=2.32.3",
    "sentry-sdk>=2.18.0",
    "sqlalchemy<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "factory-boy>=3.3.1",
    "freezegun>=1.5.1",
    "mock>=5.1.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "psycopg2-binary>=2.9.10",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "respx>=0.21.1",
    "ruff>=0.7.3",
    "types-mock>=5.1.0.20240425",
    # NOTE: some weird interaction between existing `vcrpy` snapshots and the way
    # `oauth2` / `minio` deal with requests forces us to downgrade `urllib3`:
    "urllib3==1.26.19",
    "vcrpy>=6.0.2",
]
