[project]
name = "shared"
version = "0.1.0"
description = "Shared code used in codecov API and worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.20.25",
    "cachetools>=4.1.1",
    "cerberus>=1.3.5",
    "codecov-ribs>=0.1.18",
    "colour>=0.1.5",
    "cryptography>=43.0.1",
    "django-better-admin-arrayfield>=1.4.2",
    "django-model-utils>=4.5.1",
    "django-postgres-extra>=2.0.8",
    "django-prometheus>=2.3.1",
    "django<5",
    "google-auth>=2.21.0",
    "google-cloud-pubsub>=2.18.4",
    "google-cloud-storage>=2.18.2",
    "httpx>=0.23.0",
    "ijson>=3.2.3",
    "minio>=7.1.13",
    "mmh3>=4.0.1",
    "oauthlib>=3.1.0",
    "orjson>=3.10.9",
    "prometheus-client>=0.17.1",
    "pyjwt>=2.8.0",
    "pyparsing>=2.4.7",
    "python-redis-lock>=4.0.0",
    "pyyaml>=6.0.1",
    "redis>=4.4.4",
    "requests>=2.32.3",
    "sentry-sdk>=2.13.0",
    "sqlalchemy<2",
    "zstandard>=0.23.0",
    "pydantic>=2.10.4",
    "amplitude-analytics>=1.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "factory-boy>=3.2.0",
    "freezegun>=1.1.0",
    "mock>=4.0.3",
    "mypy>=1.13.0",
    "pre-commit>=2.11.1",
    "psycopg2-binary>=2.9.2",
    "pytest-asyncio>=0.14.0",
    "pytest-codspeed>=3.2.0",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.7.0",
    "pytest-mock>=1.13.0",
    "pytest>=8.1.1",
    "respx>=0.20.2",
    "ruff>=0.9.0",
    "types-mock>=5.1.0.20240425",
    # NOTE: some weird interaction between existing `vcrpy` snapshots and the way
    # `oauth2` / `minio` deal with requests forces us to downgrade `urllib3`:
    "urllib3==1.26.19",
    "vcrpy>=4.1.1",
    "types-requests>=2.31.0.6",
]
